--- a/index.html
+++ b/index.html
@@ -11,20 +11,51 @@
             <link href="style.css" rel="stylesheet">
         </head>
         <body>
-            <p>
-                I'm a first-year Information Technology major at Ozarks Technical Community College aiming to become a system administrator. 
 
-                Classes I've Taken:
-                Intro to Programming: Utilized C# language with a team to build basic programs such as a calculator and library database.
+            <!--navigation bar-->
+            <nav>
+                <img class="headerImg" src="mountain.jpg" alt="mountain">
+                <a href="index.html">Home</a>⚫
+                <a href="sites.html">Sites</a>               
+            </nav>
+            <!--end region-->
 
-                Web Site Development: Used HTML and CSS to build websites including one for a real client. 
+            <!--main class-->
+            <div class="main">
+                <h1>Jake Etherton</h1>
+                <div class="pcImg">
+                    <img class="pc" src="pc.webp" alt="pc">
+                </div>
+                <div class="paragraph">
+                    <p>
+                        I'm a first-year Information Technology major at Ozarks Technical Community College aiming to become a system administrator. 
+                    </p>
+                    <br>
+                    <h3>
+                        Classes I've Taken:
+                    </h3>
+                    <p>    
+                        Intro to Programming: Utilized C# language with a team to build basic programs such as a calculator and library database.
+                        <br>
+                        Web Site Development: Used HTML and CSS to build websites including one for a real client. 
+                        <br>
+                        Technology/ Digital Literacy: Learned the different functions and uses for Microsoft Office programs.
+                    </p>
+                    <br>
+                    <h3>
+                        Past Experience: 
+                    </h3>
+                    <p>
+                         I have two years of experience working in retail and aim to break into the IT field soon. During my free time, I have built a custom PC and helped others when building theirs. 
+                    </p>
+            </div>
+            </div>
+            <!--end region-->
 
-                Technology/ Digital Literacy: Learned the different functions and uses for Microsoft Office programs. 
-
-                Past Experience: 
-                I have two years of experience working in retail and aim to break into the IT field soon. During my free time, I have built a custom PC and helped others when building theirs. 
-            </p>
-            <a href="bait/index.html">Lakeside</a>
-            <a href="inkd/index.html">Ink'd Impressions</a>
-            <a href="Company/index.html">Pizza Delivery</a>
-    
+            <!--footer-->
+            <footer>
+                <p>
+                    Jake Etherton 2023
+                </p>
+            </footer>
+            <!--end region-->
